# SilhouetteProject

./: CMakeLists.txt  README.md
include/: background_subtraction.h  main.h  mdgkt_filter.h  precomp.h
src/: CMakeLists.txt  CMakeLists.txt~  background_subtraction.cpp  main.cpp  mdgkt_filter.cpp  sagmm.cpp
